--- a/src/resources/views/order.hbs
+++ b/src/resources/views/order.hbs
@@ -1,17 +1,24 @@
-<div class="card text-center mt-5 w-50" style="margin:auto">
-  <div class="card-header">
-    Nhập số điện thoại để tìm kiếm
-  </div>
-  <div class="card-body">
-    <input id="phonenumber" type="text" class="form-control my-4" placeholder="Nhập số điện thoại">
-    <buttontype="button" class="btn btn-primary" onclick="search()">
-        Tìm kiếm
-    </button>
-  </div>
+<div class="card my-4" style="width: 30rem; margin:auto">
+    <img class="card-img-top" src="https://lh3.google.com/u/0/d/1k0t3SqjArsB706e6kLadzRJO9WV7FZbR=w1920-h942-iv1">
+    <div class="card-body">
+        <h2 class="card-title">Thông tin khách hàng</h5>
+    </div>
+    <ul class="list-group list-group-flush mb-4">
+        <li class="list-group-item">
+            Họ và tên
+            <span style="margin-left: 100px;"><strong>{{order.name}}</strong></span>
+        </li>
+        <li class="list-group-item">
+            Số điện thoại
+            <span style="margin-left: 75px;"><strong>{{order.phone}}</strong></span>
+        </li>
+        <li class="list-group-item">
+            Địa chỉ
+            <span style="margin-left: 120px;"><strong>{{order.address}}</strong></span>
+        </li>
+        <li class="list-group-item">
+            Tình trạng đơn hàng
+            <span style="margin-left: 25px;"><strong>{{order.state}}</strong></span>
+        </li>
+    </ul>
 </div>
-
-<script>
-    function search() {
-        window.location.href = '/order/' + document.getElementById('phonenumber').value
-    }
-</script>
